--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "displayName": "vscode-svelte-outline",
   "description": "Better outline for svelte files in VS Code",
   "version": "0.0.1",
+  "publisher": "Yojmb0",
   "repository": {
     "type": "git",
     "url": "https://github.com/Yojimb0/vscode-svelte-outline.git"
